# jpetGeant

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  JPetMC.cpp  JPetMC.h  LinkDef.h  PARAMETERS.md  README  README.md
Actions/: ActionInitialization.cpp  ActionInitialization.h  EventAction.cpp  EventAction.h  PrimaryGeneratorAction.cpp  PrimaryGeneratorAction.h  RunAction.cpp  RunAction.h  SteppingAction.cpp  SteppingAction.h  TrackingAction.cpp  TrackingAction.h
Core/: BeamParams.cpp  BeamParams.h  DetectorConstants.cpp  DetectorConstants.h  DetectorConstruction.cpp  DetectorConstruction.h  DetectorSD.cpp  DetectorSD.h  HistoManager.cpp  HistoManager.h  MaterialExtension.cpp  MaterialExtension.h  MaterialParameters.cpp  MaterialParameters.h  NemaGenerator.cpp  NemaGenerator.h  PhysicsList.cpp  PhysicsList.h  PrimaryGenerator.cpp  PrimaryGenerator.h  PrimaryGeneratorConstants.h  PrimaryGeneratorConstants.h   RunMaganger.cpp  RunManager.cpp  RunManager.h  SourceParams.cpp  SourceParams.h
Info/: DetectorConstructionMessenger.cpp  DetectorConstructionMessenger.h  EventMessenger.cpp  EventMessenger.h  MaterialExtensionMessenger.cpp  MaterialExtensionMessenger.h  PrimaryGeneratorActionMessenger.cpp  PrimaryGeneratorActionMessenger.h  PrimaryParticleInformation.cpp  PrimaryParticleInformation.h  VtxInformation.cpp  VtxInformation.h
Objects/Framework/: JPetGeantDecayTree.cpp  JPetGeantDecayTree.h  JPetGeantDecayTreeBranch.cpp  JPetGeantDecayTreeBranch.h  JPetGeantEventInformation.cpp  JPetGeantEventInformation.h  JPetGeantEventPack.cpp  JPetGeantEventPack.h  JPetGeantScinHits.cpp  JPetGeantScinHits.h
Objects/Geant4/: DetectorHit.cpp  DetectorHit.h  EvtInfo.h  Trajectory.cpp  Trajectory.h
doc/: Doxyfile.in
docs/: PARAMETERS.md  authors.md  install.md  intro.md  rangeCut.md  user_intro.md
include/: ActionInitialization.h  ActionInitialization.hh  BeamParams.h  DecayTree.hh  DetectorConstants.h  DetectorConstruction.h  DetectorConstruction.hh  DetectorConstructionMessenger.h  DetectorConstructionMessenger.hh  DetectorHit.h  DetectorHit.hh  DetectorSD.h  DetectorSD.hh  Event.hh  EventAction.h  EventAction.hh  EventInformation.hh  EventMessenger.h  EvtInfo.h  HistoManager.h  HistoManager.hh  JPetGeantDecayTree.h  JPetGeantEventInformation.h  JPetGeantEventPack.h  JPetGeantScinHits.h  MaterialExtension.h  MaterialExtension.hh  MaterialExtensionMessenger.h  MaterialParameters.h  ParticleBlock.hh  PhysicsList.h  PhysicsList.hh  PrimaryGenerator.h  PrimaryGenerator.hh  PrimaryGeneratorAction.h  PrimaryGeneratorAction.hh  PrimaryGeneratorActionMessenger.h  PrimaryGeneratorActionMessenger.hh  PrimaryGeneratorMessenger.hh  PrimaryParticleInformation.h  (+18 more)
jenkins/: Jenkinsfile
jenkins/root_6/: Dockerfile  docker-compose.yml  docker-entrypoint.sh
scripts/: cosmics.mac  extendedSource.mac  init_vis.mac  modSmCh.mac  nema.mac  nemaJ_XY.mac  nemaJ_YZ.mac  readJSONSetup.mac  run12.mac  run3.mac  run5.mac  run5_lifetime.mac  run6.mac  run7.mac  singleBeam.mac  vis.mac
setups/: big_barrel_3layers.json  dual_head_ccb.json  endcap_example.json  modular_24_ring.json  trento_2mods.json
src/: ActionInitialization.cc  ActionInitialization.cpp  BeamParams.cpp  DecayTree.cc  DetectorConstants.cpp  DetectorConstruction.cc  DetectorConstruction.cpp  DetectorConstructionMessenger.cc  DetectorConstructionMessenger.cpp  DetectorHit.cc  DetectorHit.cpp  DetectorSD.cc  DetectorSD.cpp  Event.cc  EventAction.cc  EventAction.cpp  EventInformation.cc  EventMessenger.cpp  EvtInfo.cc  HistoManager.cc  HistoManager.cpp  JPetGeantDecayTree.cpp  JPetGeantEventInformation.cpp  JPetGeantScinHits.cpp  JPetMC.cc  JPetMC.cpp  MaterialExtension.cc  MaterialExtension.cpp  MaterialExtensionMessenger.cpp  MaterialParameters.cpp  ParticleBlock.cc  PhysicsList.cc  PhysicsList.cpp  PrimaryGenerator.cc  PrimaryGenerator.cpp  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.cpp  PrimaryGeneratorActionMessenger.cc  PrimaryGeneratorActionMessenger.cpp  PrimaryGeneratorMessenger.cc  (+20 more)
stl_geometry/: Ring_SphericalChamber.ascii.stl  Ring_SphericalChamber.stl  spojnik_1.stl  spojnik_2.stl  spojnik_3.stl  spojnik_4.stl  spornik_dlugi_1.stl  spornik_dlugi_2.stl
stl_sushil/: profil.stl
